# ChangeLog for net-nds/389-admin
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-nds/389-admin/ChangeLog,v 1.13 2014/06/22 20:35:46 lxnay Exp $

  22 Jun 2014; Fabio Erculiani <lxnay@gentoo.org> metadata.xml:
  reset to maintainer-needed@

  04 Mar 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  389-admin-1.1.31.ebuild:
  Add subslot dependency on dev-libs/icu

*389-admin-1.1.31 (14 Mar 2013)

  14 Mar 2013; Fabio Erculiani <lxnay@gentoo.org> +389-admin-1.1.31.ebuild,
  -389-admin-1.1.23.ebuild:
  version bump, migrate to openldap

  14 Mar 2013; Fabio Erculiani <lxnay@gentoo.org> -389-admin-1.1.16.ebuild:
  drop older versions

  16 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> 389-admin-1.1.23.ebuild:
  fix compilation with selinux USE flag on, hopefully fixes bug 379309

*389-admin-1.1.23 (14 Aug 2011)

  14 Aug 2011; Fabio Erculiani <lxnay@gentoo.org> +389-admin-1.1.23.ebuild:
  version bump

*389-admin-1.1.16 (14 Jun 2011)

  14 Jun 2011; Fabio Erculiani <lxnay@gentoo.org>
  -files/1.1.14_backports/0000-selinux-crash-fix.patch,
  +389-admin-1.1.16.ebuild, -389-admin-1.1.11_rc1-r1.ebuild,
  -389-admin-1.1.13.ebuild,
  -files/1.1.14_backports/0001-ssl-segfault-fix.patch:
  version bump, fixes Gentoo bug #371633, drop older releases

*389-admin-1.1.13 (11 Jan 2011)

  11 Jan 2011; Fabio Erculiani <lxnay@gentoo.org>
  +files/1.1.14_backports/0000-selinux-crash-fix.patch,
  +389-admin-1.1.13.ebuild,
  +files/1.1.14_backports/0001-ssl-segfault-fix.patch:
  version bump

*389-admin-1.1.11_rc1-r1 (12 Nov 2010)

  12 Nov 2010; Fabio Erculiani <lxnay@gentoo.org> files/389-admin.initd,
  -389-admin-1.1.11_rc1.ebuild, +389-admin-1.1.11_rc1-r1.ebuild:
  init script tweak, always need 389-ds service

  17 Oct 2010; Fabio Erculiani <lxnay@gentoo.org>
  389-admin-1.1.11_rc1.ebuild:
  tweak apache2 dependencies a bit, make them more atomic

  15 Jul 2010; Fabio Erculiani <lxnay@gentoo.org> metadata.xml: